[tool.poetry]
name = "pyutils"
version = "0.0.1"
description = "collection of python utility functions"
authors = ["Rishabh Singh <rishabhsingh971@gmail.com>"]
readme = "README.md"
packages = [{include = "pyutils"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"


[tool.poetry.dev-dependencies]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
